Fix form and input margins on mobile

--- a/src/styles/sass/_media.scss
+++ b/src/styles/sass/_media.scss
@@ -20,7 +20,7 @@
     form {
         width: 90%; 
     } 
-    textarea {
+    input {
         width: 300px; 
         height: 150px;  
         margin: 10px auto;
@@ -38,7 +38,7 @@
     form {
         width: 100%; 
     } 
-    textarea {
+    input {
         width: 250px; 
         height: 200px;  
     }
@@ -52,8 +52,11 @@
     h1 {
         font-size: 4rem;
     } 
-    textarea {
-        width: 220px; 
+    form {
+        padding: 50px 0; 
+    } 
+    input {
+        width: 200px; 
         height: 220px;  
     } 
 }
