--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -510,7 +510,7 @@ footer a:hover {
     width: 90%;
   }
 
-  textarea {
+  input {
     width: 300px;
     height: 150px;
     margin: 10px auto;
@@ -530,7 +530,7 @@ footer a:hover {
     width: 100%;
   }
 
-  textarea {
+  input {
     width: 250px;
     height: 200px;
   }
@@ -545,8 +545,12 @@ footer a:hover {
     font-size: 4rem;
   }
 
-  textarea {
-    width: 220px;
+  form {
+    padding: 50px 0;
+  }
+
+  input {
+    width: 200px;
     height: 220px;
   }
 }
